--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,21 +1,23 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="utf-8">
-<title>You Lazy AF?</title>
-<link href="Experiments/new.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<title>You Lazy Though?</title>
+	<link href="new.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-<h1 id="center"> When you too lazy af.</h1>
+<div id="sidebar-thingy">
+<h1 id="giant-title"> When you too lazy af.</h1>
 
 <p> Here are a bunch of links when you are too lazy to search for stuff.</p>
 <p> <a href="http://www.google.com">Goddamn Google</a>  </p>
 <p><a href="http://www.facebook.com">Facebook you plebs </a> </p>
 <p><a href="http://www.tumblr.com">I don't even use this goddamn website</a> </p>
+</div>
+<div id="giant-box-in-middle">
+<h1 id="giant title"> Something should go here and control something. </h1>
 
-
-
-
+</div>
 </body>
 </html>
