--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,22 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>You Lazy Though?</title>
+	<title>Restarting Website</title>
 	<link href="new.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-<div id="sidebar-thingy">
-<h1 id="giant-title"> When you too lazy af.</h1>
-
-<p> Here are a bunch of links when you are too lazy to search for stuff.</p>
-<p> <a href="http://www.google.com">Goddamn Google</a>  </p>
-<p><a href="http://www.facebook.com">Facebook you plebs </a> </p>
-<p><a href="http://www.tumblr.com">I don't even use this goddamn website</a> </p>
-</div>
-<div id="giant-box-in-middle">
-<h1 id="giant title"> Something should go here and control something. </h1>
-
+<h1 id="header">Giant title that sorta sets as the header of the website</h1>
+<div id="bars">
+<ul>
+	<li> stuff </li>
+	<li> more stuff </li>
+	<li> even more stuff </li>
+	</ul>
 </div>
 </body>
 </html>
